creditas-sf/force-app/main/default/objects/Account/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <label>Número da Conta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>