creditas-sf/force-app/main/default/objects/Account/fields/AccountOperation__c.field-meta.xml
<CustomField>
    <fullName>AccountOperation__c</fullName>
    <label>Tipo de operação da conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pessoa Jurídica</fullName>
            </value>
            <value>
                <fullName>Pessoa Física</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>