creditas-sf/force-app/main/default/objects/Account/fields/ActualJob__c.field-meta.xml
<CustomField>
    <fullName>ActualJob__c</fullName>
    <label>Emprego atual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>