creditas-sf/force-app/main/default/objects/Account/fields/AdressCompany__c.field-meta.xml
<CustomField>
    <fullName>AdressCompany__c</fullName>
    <label>Endereço da empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>