creditas-sf/force-app/main/default/objects/Account/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <label>Filiação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mãe</fullName>
            </value>
            <value>
                <fullName>Pai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>