creditas-sf/force-app/main/default/objects/Account/fields/agency__c.field-meta.xml
<CustomField>
    <fullName>agency__c</fullName>
    <label>Agência</label>
    <length>20</length>
    <type>Text</type>
</CustomField>