creditas-sf/force-app/main/default/objects/Account/fields/BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNumber__c</fullName>
    <description>Número da conta do cliente</description>
    <label>Bank Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>