creditas-sf/force-app/main/default/objects/Account/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <description>Nome do banco do cliente.</description>
    <label>Banco</label>
    <length>50</length>
    <type>Text</type>
</CustomField>