creditas-sf/force-app/main/default/objects/Account/fields/Birth_City__c.field-meta.xml
<CustomField>
    <fullName>Birth_City__c</fullName>
    <label>Birth City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>