creditas-sf/force-app/main/default/objects/Account/fields/Birth_Country__c.field-meta.xml
<CustomField>
    <fullName>Birth_Country__c</fullName>
    <label>País de Nascimento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>