creditas-sf/force-app/main/default/objects/Account/fields/BirthCity__c.field-meta.xml
<CustomField>
    <fullName>BirthCity__c</fullName>
    <label>Cidade de Nascimento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>