creditas-sf/force-app/main/default/objects/Account/fields/CivilStatus__c.field-meta.xml
<CustomField>
    <fullName>CivilStatus__c</fullName>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MARRIED</fullName>
                <label>Casado(a)</label>
            </value>
            <value>
                <fullName>SEPARATED</fullName>
                <label>Separado(a)</label>
            </value>
            <value>
                <fullName>SINGLE</fullName>
                <label>Solteiro(a)</label>
            </value>
            <value>
                <fullName>DIVORCED</fullName>
                <label>Divorciado(a)</label>
            </value>
            <value>
                <fullName>WIDOW</fullName>
                <label>Viúvo(a)</label>
            </value>
            <value>
                <fullName>STABLE_UNION</fullName>
                <label>União estável</label>
            </value>
            <value>
                <fullName>NOT_INFORMED</fullName>
                <label>Não informado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>