creditas-sf/force-app/main/default/objects/Account/fields/Clabe__c.field-meta.xml
<CustomField>
    <fullName>Clabe__c</fullName>
    <description>Campo para identificar número de conta bancária do cliente. (creditas-mx)</description>
    <label>Clabe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>