creditas-sf/force-app/main/default/objects/Account/fields/CompanyCNPJ__c.field-meta.xml
<CustomField>
    <fullName>CompanyCNPJ__c</fullName>
    <label>CNPJ da empresa</label>
    <length>14</length>
    <type>Text</type>
</CustomField>