creditas-sf/force-app/main/default/objects/Account/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>Nome da empresa</label>
    <type>TextArea</type>
</CustomField>