creditas-sf/force-app/main/default/objects/Account/fields/CompanyStatus__c.field-meta.xml
<CustomField>
    <fullName>CompanyStatus__c</fullName>
    <description>Status da Empresa</description>
    <label>Status da empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>