creditas-sf/force-app/main/default/objects/Account/fields/Curp__c.field-meta.xml
<CustomField>
    <fullName>Curp__c</fullName>
    <description>Campo.utilizado para identificação do cidadão mexicano. (Creditas-mx)</description>
    <label>Curp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>