creditas-sf/force-app/main/default/objects/Account/fields/DealStartDate__c.field-meta.xml
<CustomField>
    <fullName>DealStartDate__c</fullName>
    <label>DealStartDate</label>
    <type>Date</type>
</CustomField>