creditas-sf/force-app/main/default/objects/Account/fields/DocumentKey__c.field-meta.xml
<CustomField>
    <fullName>DocumentKey__c</fullName>
    <formula>TEXT(DocumentType__c) &amp; &quot; - &quot; &amp; DocumentNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo do documento</label>
    <type>Text</type>
</CustomField>