creditas-sf/force-app/main/default/objects/Account/fields/Documento_de_identificacao__c.field-meta.xml
<CustomField>
    <fullName>Documento_de_identificacao__c</fullName>
    <label>Documento de identificação</label>
    <length>11</length>
    <type>Text</type>
</CustomField>