creditas-sf/force-app/main/default/objects/Account/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Tipo do Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPF</fullName>
            </value>
            <value>
                <fullName>RFC</fullName>
            </value>
            <value>
                <fullName>CNPJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>