creditas-sf/force-app/main/default/objects/Account/fields/EconomicActivity__c.field-meta.xml
<CustomField>
    <fullName>EconomicActivity__c</fullName>
    <label>Atividade econômica profissional:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultura [AGRICULTURE]</fullName>
            </value>
            <value>
                <fullName>Mineração [MINING]</fullName>
            </value>
            <value>
                <fullName>Óleo [OIL]</fullName>
            </value>
            <value>
                <fullName>Fabricação de alimentos [FOOD_MANUFACTURING]</fullName>
            </value>
            <value>
                <fullName>Pecuária [CATTLE_RAISING]</fullName>
            </value>
            <value>
                <fullName>Têxtil [TEXTILE]</fullName>
            </value>
            <value>
                <fullName>Madeira [WOOD]</fullName>
            </value>
            <value>
                <fullName>Papel [PAPER]</fullName>
            </value>
            <value>
                <fullName>Editorial [EDITORIAL]</fullName>
            </value>
            <value>
                <fullName>Química [CHEMISTRY]</fullName>
            </value>
            <value>
                <fullName>Floresta [FOREST]</fullName>
            </value>
            <value>
                <fullName>Petroquímicos [PETROCHEMICALS]</fullName>
            </value>
            <value>
                <fullName>Minerais não metálicos [NON_METALLIC_MINERALS]</fullName>
            </value>
            <value>
                <fullName>Metalurgia [METALLURGY]</fullName>
            </value>
            <value>
                <fullName>Maquinaria [MACHINERY]</fullName>
            </value>
            <value>
                <fullName>Fabricação [MANUFACTURE]</fullName>
            </value>
            <value>
                <fullName>Acabamento [FINISHING]</fullName>
            </value>
            <value>
                <fullName>Construção [CONSTRUCTION]</fullName>
            </value>
            <value>
                <fullName>Energia elétrica [ELECTRIC_POWER]</fullName>
            </value>
            <value>
                <fullName>Comida pronta [PREPARED_FOOD]</fullName>
            </value>
            <value>
                <fullName>Roupas [CLOTHES]</fullName>
            </value>
            <value>
                <fullName>Lojas [STORES]</fullName>
            </value>
            <value>
                <fullName>Comércio [COMMERCE]</fullName>
            </value>
            <value>
                <fullName>Veículos [VEHICLES]</fullName>
            </value>
            <value>
                <fullName>Armas de fogo [FIREARMS]</fullName>
            </value>
            <value>
                <fullName>Serviços financeiros [FINANCIAL_SERVICES]</fullName>
            </value>
            <value>
                <fullName>Imóveis [REAL_STATE]</fullName>
            </value>
            <value>
                <fullName>Jogos de sorte/ apostas [RAFFLES_SEEPSTAKES]</fullName>
            </value>
            <value>
                <fullName>Transporte terrestre [GROUND_TRANSPORTATION]</fullName>
            </value>
            <value>
                <fullName>Transporte aéreo [AIR_TRANSPORTATION]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>