creditas-sf/force-app/main/default/objects/Account/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ILLITERATE</fullName>
            </value>
            <value>
                <fullName>PRIMARY_SCHOOL_INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>PRIMARY_SCHOOL_COMPLETED</fullName>
            </value>
            <value>
                <fullName>FOURTH_YEAR_PRIMARY_SCHOOL_INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>FOURTH_YEAR_PRIMARY_SCHOOL_COMPLETED</fullName>
            </value>
            <value>
                <fullName>HIGH_SCHOOL_INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>HIGH_SCHOOL_COMPLETED</fullName>
            </value>
            <value>
                <fullName>COLLEGE_DEGREE_INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>COLLEGE_DEGREE_COMPLETED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>