creditas-sf/force-app/main/default/objects/Account/fields/EmployeeCode__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCode__c</fullName>
    <description>Código de matrícula (somente algumas empresas possui, exemplo as que tem mais de um contrato por pessoa)</description>
    <label>Código do colaborador</label>
    <length>100</length>
    <type>Text</type>
</CustomField>