creditas-sf/force-app/main/default/objects/Account/fields/EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>EmployeeId__c</fullName>
    <externalId>true</externalId>
    <label>EmployeeId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>