creditas-sf/force-app/main/default/objects/Account/fields/EmployeeStatus__c.field-meta.xml
<CustomField>
    <fullName>EmployeeStatus__c</fullName>
    <label>EmployeeStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>ON_LEAVE</fullName>
            </value>
            <value>
                <fullName>FIRED</fullName>
            </value>
            <value>
                <fullName>RETIRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>