creditas-sf/force-app/main/default/objects/Account/fields/enabledProducts__c.field-meta.xml
<CustomField>
    <fullName>enabledProducts__c</fullName>
    <description>Produtos habilitados para a Empresa</description>
    <label>Produtos habilitados</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STORE</fullName>
            </value>
            <value>
                <fullName>PAYROLL</fullName>
            </value>
            <value>
                <fullName>SALARY_ADVANCE</fullName>
            </value>
            <value>
                <fullName>CREDIT_CARD</fullName>
            </value>
            <value>
                <fullName>BENEFITS_CARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>