creditas-sf/force-app/main/default/objects/Account/fields/ExternalCompanyId__c.field-meta.xml
<CustomField>
    <fullName>ExternalCompanyId__c</fullName>
    <description>ID de identificação interno da empresa</description>
    <externalId>true</externalId>
    <label>ID da empresa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>