creditas-sf/force-app/main/default/objects/Account/fields/ExternalCreationDate__c.field-meta.xml
<CustomField>
    <fullName>ExternalCreationDate__c</fullName>
    <description>Data de criação do registro</description>
    <label>Data de criação</label>
    <type>DateTime</type>
</CustomField>