creditas-sf/force-app/main/default/objects/Account/fields/ExternalEmployeeVersion__c.field-meta.xml
<CustomField>
    <fullName>ExternalEmployeeVersion__c</fullName>
    <label>ExternalEmployeeVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>