creditas-sf/force-app/main/default/objects/Account/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Campo utilizado pelo Mulesoft como chave para fazer atualização dos registros.</description>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>