creditas-sf/force-app/main/default/objects/Account/fields/ExternalUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>ExternalUpdatedDate__c</fullName>
    <description>Data da última modificação do registro</description>
    <label>Data de atualização</label>
    <type>DateTime</type>
</CustomField>