creditas-sf/force-app/main/default/objects/Account/fields/ExternalVersion__c.field-meta.xml
<CustomField>
    <fullName>ExternalVersion__c</fullName>
    <description>Campo para o mulesoft popular com a versão do registro no sistema externo</description>
    <label>ExternalVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>