creditas-sf/force-app/main/default/objects/Account/fields/Father__c.field-meta.xml
<CustomField>
    <fullName>Father__c</fullName>
    <description>Filiação</description>
    <label>Nome do Pai</label>
    <length>100</length>
    <type>Text</type>
</CustomField>