creditas-sf/force-app/main/default/objects/Account/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>Nome Completo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>