creditas-sf/force-app/main/default/objects/Account/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gênero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MALE</fullName>
                <label>Masculino</label>
            </value>
            <value>
                <fullName>FEMALE</fullName>
                <label>Feminino</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Outro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>