creditas-sf/force-app/main/default/objects/Account/fields/IncomeAmount__c.field-meta.xml
<CustomField>
    <fullName>IncomeAmount__c</fullName>
    <label>IncomeAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>