creditas-sf/force-app/main/default/objects/Account/fields/IneNumber__c.field-meta.xml
<CustomField>
    <fullName>IneNumber__c</fullName>
    <label>Ine Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>