creditas-sf/force-app/main/default/objects/Account/fields/Inss__c.field-meta.xml
<CustomField>
    <fullName>Inss__c</fullName>
    <label>Inss</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>