creditas-sf/force-app/main/default/objects/Account/fields/LegalName__c.field-meta.xml
<CustomField>
    <fullName>LegalName__c</fullName>
    <label>LegalName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>