creditas-sf/force-app/main/default/objects/Account/fields/Mother__c.field-meta.xml
<CustomField>
    <fullName>Mother__c</fullName>
    <description>Filiação</description>
    <label>Nome da Mãe</label>
    <type>TextArea</type>
</CustomField>