creditas-sf/force-app/main/default/objects/Account/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nacionalidade</label>
    <length>20</length>
    <type>Text</type>
</CustomField>