creditas-sf/force-app/main/default/objects/Account/fields/Naturalidade__c.field-meta.xml
<CustomField>
    <fullName>Naturalidade__c</fullName>
    <label>Naturalidade</label>
    <type>TextArea</type>
</CustomField>