creditas-sf/force-app/main/default/objects/Account/fields/NetWorthLowerLimit__c.field-meta.xml
<CustomField>
    <fullName>NetWorthLowerLimit__c</fullName>
    <label>Patrimônio líquido mínimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>