creditas-sf/force-app/main/default/objects/Account/fields/NetWorthUpperLimit__c.field-meta.xml
<CustomField>
    <fullName>NetWorthUpperLimit__c</fullName>
    <label>NetWorthUpperLimit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>