creditas-sf/force-app/main/default/objects/Account/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Cargo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>