creditas-sf/force-app/main/default/objects/Account/fields/PoliticallyExposed__c.field-meta.xml
<CustomField>
    <fullName>PoliticallyExposed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pessoa Politicamente Exposta</label>
    <type>Checkbox</type>
</CustomField>