creditas-sf/force-app/main/default/objects/Account/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profissão</label>
    <type>TextArea</type>
</CustomField>