creditas-sf/force-app/main/default/objects/Account/fields/ProfessionalSituation__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalSituation__c</fullName>
    <label>Situação profissional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pessoa Assalariada</fullName>
            </value>
            <value>
                <fullName>Pessoa Autônoma</fullName>
            </value>
            <value>
                <fullName>Pessoa Funcionária pública</fullName>
            </value>
            <value>
                <fullName>Pessoa Aposentada</fullName>
            </value>
            <value>
                <fullName>Pessoa Empresária</fullName>
            </value>
            <value>
                <fullName>Profissional Liberal</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>