creditas-sf/force-app/main/default/objects/Account/fields/ResignationDate__c.field-meta.xml
<CustomField>
    <fullName>ResignationDate__c</fullName>
    <label>Data de demissão</label>
    <type>Date</type>
</CustomField>