creditas-sf/force-app/main/default/objects/Account/fields/Rg_o_Emissor__c.field-meta.xml
<CustomField>
    <fullName>Rg_o_Emissor__c</fullName>
    <label>Órgão Emissor</label>
    <type>TextArea</type>
</CustomField>