creditas-sf/force-app/main/default/objects/Account/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>