creditas-sf/force-app/main/default/objects/Account/fields/SecondLastName__c.field-meta.xml
<CustomField>
    <fullName>SecondLastName__c</fullName>
    <label>Outro nome/sobrenome</label>
    <length>100</length>
    <type>Text</type>
</CustomField>