creditas-sf/force-app/main/default/objects/Account/fields/SecondName__c.field-meta.xml
<CustomField>
    <fullName>SecondName__c</fullName>
    <label>Second Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>