creditas-sf/force-app/main/default/objects/Account/recordTypes/AccountTest.recordType-meta.xml
<RecordType>
    <fullName>AccountTest</fullName>
    <active>true</active>
    <label>AccountTest</label>
</RecordType>