creditas-sf/force-app/main/default/objects/Account/recordTypes/AUTOFIN_PessoaFisica.recordType-meta.xml
<RecordType>
    <fullName>AUTOFIN_PessoaFisica</fullName>
    <active>true</active>
    <label>[AUTOFIN] Pessoa Física</label>
</RecordType>