creditas-sf/force-app/main/default/objects/Account/recordTypes/AUTOFIN_PessoaJuridica.recordType-meta.xml
<RecordType>
    <fullName>AUTOFIN_PessoaJuridica</fullName>
    <active>true</active>
    <label>[AUTOFIN] Pessoa Jurídica</label>
</RecordType>