creditas-sf/force-app/main/default/objects/Account/recordTypes/Pessoa_Fisica.recordType-meta.xml
<RecordType>
    <fullName>Pessoa_Fisica</fullName>
    <active>true</active>
    <label>Pessoa Física</label>
</RecordType>