creditas-sf/force-app/main/default/objects/Account/recordTypes/Pessoa_Juridica.recordType-meta.xml
<RecordType>
    <fullName>Pessoa_Juridica</fullName>
    <active>true</active>
    <label>Pessoa Jurídica</label>
</RecordType>