creditas-sf/force-app/main/default/objects/Account/listViews/mulesoft.listView-meta.xml
<ListView>
    <fullName>mulesoft</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>[mulesoft]</value>
    </filters>
    <label>mulesoft created test</label>
</ListView>